--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@supabase/supabase-js": "^2.39.2",
+		"sharp": "^0.33.1"
+	}
 }
