--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.39.2",
+		"@vercel/analytics": "^1.1.2",
+		"@vercel/speed-insights": "^1.0.9",
 		"sharp": "^0.33.2"
 	}
 }
